smartemission/services/sosemu/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sosemu-deployment
  namespace: smartemission
  labels:
    app: sosemu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sosemu
  template:
    metadata:
      labels:
        app: sosemu
    spec:
      containers:
      - name: sosemu
        image: smartemission/se-sosemu:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
