smartemission/services/sosemu/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sosemu-service
  namespace: smartemission
  labels:
    app: sosemu
spec:
  ports:
  - port: 80
  selector:
    app: sosemu
