smartemission/services/sosemu/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sosemu
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /sosemu;
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /sosemu
        backend:
          serviceName: sosemu-service
          servicePort: 80
